welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EAST)
               ^DwarfCode:4: error: not found: value estSurBaggle
    while (!estSurBaggle) {
            ^DwarfCode:7: error: not found: value estSurBaggle
    if (estSurBaggle) {
        ^DwarfCode:17: error: not found: value estSurBaggle
  while (!estSurBaggle) {
          ^DwarfCode:21: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^DwarfCode:25: error: not found: value rechercheOsbtacle
rechercheOsbtacle()
^